[package]
name = "varisat-utils"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Utilities for varisat, adding at-most one and exactly-one constraints"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
varisat = "0.2.2"
num = "0.4"
smallvec = "1.8.0"